2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/lyric-extender.ly: Fix and add test.

	* lily/extender-engraver.cc (stop_translation_timestep): Oops, typo.

2004-09-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-head.cc: remove Note_head::extent.

2004-09-23  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely: do manual style 2-space
	indents in examples

	* Documentation/user/notation.itely: more editing.

2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lyric-engraver.cc (get_current_rest): New function.

	* lily/extender-engraver.cc (stop_translation_timestep): Use it:
	stop at rest.

	* lily/lyric-extender.cc (print): Fix crash (Russ Ross).

	* lily/slur-scoring.cc (get_bezier): Fix for broken beziers.

2004-09-23  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/examples.itely (Small ensembles): added
	example for transcription of mensural music

	* Documentation/user/notation.itely (The Lyrics context): fixed broken
	link to SATB vocal score

	* Documentation/user/notation.itely (System start delimiters):
	fixed typo: GrandStaff->StaffGroup

	* Documentation/user/notation.itely (Ancient articulations):
	removed obsolete comment on \episem bug

2004-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-tex.scm (output-preview-framework): Fix invocation
	of header.

2004-09-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/dynamic-engraver.cc (acknowledge_grob): attach hairpin
	start to note-column.

	* lily/hairpin.cc (print): check text-interface, to attach to
	dynamic texts.  

	* lily/include/text-item.hh (class Text_interface): rename
	Text_item -> Text_interface

	* lily/piano-pedal-bracket.cc (print): robustify.

2004-09-22  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/paper.scm (set-paper-dimensions): add printfirstpagenumber.

	* scm/page-layout.scm (plain-header): if printfirstpagenumber is
	true will print the page number in the first page.
