@@ -28,7 +28,6 @@
 class Lyric_extender
 {
 public:
-  static bool is_visible (Grob*);
   static bool has_interface (Grob*);
   DECLARE_SCHEME_CALLBACK (print, (SCM ));
 };
